<resources>
    <string name="app_name">NotificationBox</string>
    <string name="service_name">Notification Listener Service</string>
    <string name="activity_applist">App List</string>
    <string name="action_settings">Settings</string>
    <string name="feature">Feature</string>
    <string name="about">About</string>
    <string name="open_source">OpenSource</string>
    <string name="based_on">Based on</string>
    <string name="reminder">Intercept reminder</string>
    <string name="reminder_summary">Intercept notification after the reminder</string>
    <string name="permission">Set permissions</string>
    <string name="permission_summary">If the blocking is disabled, reset the permissions</string>
    <string name="no_read_notification_promission">No read notification permissions</string>
    <string name="empty_app">Click on the lower right corner of the button, add the blocking App</string>
    <string name="empty_detail">There is no recorded matching your query</string>
    <string name="notify_blocking">Intercept: %1$s</string>
    <string name="add_info"> Please make sure that the application has the  RECEIVE_BOOT_COMPLETED permission and been listed in the background whitelist.\n
        If the software is not effective, please try to reboot the meachine.\n
        The text filter runs as follows:\n
        Message= (push title + push content).ReplaceAll ("\n", "");
        Rules[]=rule.split ("\n"); Result=Pattern.matches (rules[i], message)\n
        For example -- Push Title:Mr.Right  push message:GN\n
        Right rules:Mr.RightGN  Mr.Right.*  Mr.*  .*GN  .*GN.*    </string>
    <string name="add_hint">Each row is a rule, with limited regular support</string>
    <string name="split_title_1">Permission</string>
    <string name="split_title_2">Matches Function</string>
    <string name="split_title_3">Sample Rules</string>
    <string name="split_info_1">Please make sure that the application has the auto run permission and been listed in the background whitelist.\n
        If the software is not effective, please try to reboot the meachine.</string>
    <string name="split_info_2">Message= (push title + push content).ReplaceAll (\"\\n\", \"\");         Rules[]=rule.split (\"\\n\"); Result=Pattern.matches (rules[i], message)</string>
    <string name="split_info_3">Push Title:Mr.Right  push message:GN\\n         Right rules:Mr.RightGN  Mr.Right.*  Mr.*  .*GN  .*GN.*</string>
<!--    <string name="Record_all">Record all notifications</string>
    <string name="Record_all_detail">Record unselected application notification.</string>-->
    <string name="query_hint1">Title</string>
    <string name="query_hint2">Content</string>
    <string name="mode_0">Normal</string>
    <string name="mode_1">Work</string>
    <string name="mode_2">Home</string>
    <string name="mode__1">Filter Off</string>
    <string name="all_record">All Record</string>
    <string name="f_black_list">Black list for all apps</string>
    <string name="f_white_list">White list for all apps</string>
    <string name="f_white_list2">White list 2 (neither filter nor recorder)</string>
    <string name="record_rebuilded">Delete done.</string>
    <string name="record_rebuild">Delete record</string>
    <string name="record_rebuild2">Delete all the notification record</string>
    <string name="delete">Delete</string>
    <string name="rules">Rules</string>
<string name="query">Query</string>
    <string name="ok">OK</string>
    <string name="channel">Channel</string>
    <string name="delete_message">Delete all these records?</string>
    <string name="use_hci_cloud">Use hci cloud to read Japanese/France/Korea/German music</string>
    <string name="read_lang2">Read more language</string>
    <string name="mode_toast">Toast mode</string>
    <string name="mode_toast_detail">Show toast message for debug.</string>
    <string name="save_setting_detail">Click this, or the upper tow item will be applied after exit the application</string>
    <string name="save_setting">Save setting</string>
</resources>
