<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="cn.gavinliu.notificationbox.ui.main.MainActivity">

    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_query"
        android:orderInCategory="100"
        android:title="@string/query"
        android:icon="@drawable/ic_find_in_page_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_rules"
        android:orderInCategory="100"
        android:title="@string/rules"
        android:icon="@drawable/ic_note_add_black_24dp"
        app:showAsAction="always"/>

</menu>
