<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>


    <LinearLayout
        android:id="@+id/viewMessageBlackList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="6dp"
        android:theme="@style/AppTheme.TextAppearanceMidX">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editMessageBlackList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_hint"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:theme="@style/AppTheme.TextAppearanceMidX" />

        <Button
            android:id="@+id/saveMessageBlackList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@color/colorPrimaryDark"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/imageButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_weight="0"
            android:background="#00000000"
            app:srcCompat="@drawable/ic_save_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewMessageQurey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="6dp"
        android:theme="@style/AppTheme.TextAppearanceMidX"
        android:visibility="gone">

        <EditText
            android:id="@+id/editMessageQuery1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/query_hint1"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:theme="@style/AppTheme.TextAppearanceMidX" />

        <EditText
            android:id="@+id/editMessageQuery2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/query_hint2"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:theme="@style/AppTheme.TextAppearanceMidX" />

        <ImageButton
            android:id="@+id/imageButtonQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_weight="0"
            android:background="#00000000"
            app:srcCompat="@drawable/ic_find_in_page_black_24dp" />
    </LinearLayout>
</FrameLayout>